# omnilake

./: .gitignore  README.md  Snippets.md  app.py  cdk.json  pyproject.toml
omnilake/ai/: client.py  models.py  stack.py
omnilake/api/: stack.py
omnilake/api/runtime/: archive.py  construct.py  entry.py  information.py  source.py
omnilake/client/: client.py  construct_request_definitions.py  request_definitions.py
omnilake/client/commands/: __init__.py  create_archive.py  create_construct.py  create_source_type.py  describe_archive.py  index.py  indexconfluence.py  initialize_project.py  list_archives.py  question.py
omnilake/internal_lib/: ai.py  clients.py  event_definitions.py  naming.py
omnilake/services/ai_statistics_collector/: stack.py
omnilake/services/ingestion/: stack.py
omnilake/services/raw_storage_manager/: stack.py
omnilake/services/responder/: default_prompts.py  stack.py
omnilake/services/storage/: stack.py
omnilake/tables/archives/: client.py
omnilake/tables/compaction_jobs/: client.py  stack.py
omnilake/tables/entries/: client.py
omnilake/tables/indexed_entries/: client.py
omnilake/tables/information_requests/: client.py
omnilake/tables/jobs/: client.py
omnilake/tables/lake_chain_requests/: client.py
omnilake/tables/lake_requests/: client.py
omnilake/tables/provisioned_archives/: client.py
omnilake/tables/registered_request_constructs/: client.py
omnilake/tables/source_types/: client.py
omnilake/tables/sources/: client.py  stack.py
omnilake/tables/vector_store_chunks/: client.py  stack.py
(+72 files in other folders)
